# sr-ros-interface

./: .bzrignore  .gitignore  .travis.yml  Copy_wine_grasp_to_coke.sql  INSTALL.md  README.md  aws.yml  changelog.tex  mkdocs.yml  project.rosinstall  repository.rosinstall  rosdep.yaml  shadow_robot.rosinstall  shadowrobot-ros-pkg.rosinstall  shippable.yml  stack.xml  todos.org
shadow_robot/: CHANGELOG.rst  CMakeLists.txt  README.txt  add_gpl.sh  gpl_licence_c.txt  gpl_licence_python.txt  package.xml  rosdep.yaml  stack.xml
shadow_robot/cyberglove/: .cproject  .project  CMakeLists.txt  cmake_install.cmake  cyberglove.launch  manifest.xml
shadow_robot/dataglove/: stack.xml
shadow_robot/doc/: generate_doc.sh
shadow_robot/math_utils/: .cproject  .project  CMakeLists.txt  cmake_install.cmake
shadow_robot/optical_acquisition/: camera_left.yaml  launch_left.launch
shadow_robot/optical_synchronizer/: CMakeLists.txt  manifest.xml
shadow_robot/sr_automatic_pid_tuning/: manifest.xml
shadow_robot/sr_control_gui/: mainpage.dox  manifest.xml
shadow_robot/sr_display/: .project  CMakeLists.txt  mainpage.dox  manifest.xml
shadow_robot/sr_friction_compensation/: mainpage.dox  manifest.xml
shadow_robot/sr_grasp_planner/: manifest.xml
shadow_robot/sr_hand/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  regenerate_urdf.sh
shadow_robot/sr_hand_palm_edc/: mainpage.dox  manifest.xml  rosdep.yaml
shadow_robot/sr_mechanism_controllers/: CMakeLists.txt  mainpage.dox  manifest.xml
shadow_robot/sr_move_arm/: CMakeLists.txt  manifest.xml
shadow_robot/sr_object_manipulation/: stack.xml
shadow_robot/sr_remappers/: mainpage.dox  manifest.xml  remapper_glove.launch
shadow_robot/sr_robot_msgs/: mainpage.dox  manifest.xml
shadow_robot/sr_smach_example/: manifest.xml
shadow_robot/sr_tactile_sensors/: CMakeLists.txt  mainpage.dox  manifest.xml
shadow_robot/sr_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
shadow_robot/sr_utilities/: CMakeLists.txt  manifest.xml
shadow_robot/threeD_mouse/: CMakeLists.txt  mainpage.dox  manifest.xml  threedmouse.launch
sr_edc_ethercat_drivers/: CMakeLists.txt  ethercat_device_plugin.xml  mainpage.dox  manifest.xml
sr_edc_ethercat_drivers/examples/: send_targets.cpp
sr_edc_ethercat_drivers/msg/: MotorTrace.msg  MotorTraceSample.msg
sr_edc_ethercat_drivers/scripts/: flash_all_motors.sh
sr_edc_ethercat_drivers/src/: sr06.cpp  sr0x.cpp  srbridge.cpp
sr_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  doc.dox  manifest.xml  package.xml
sr_gazebo_plugins/src/: gazebo_ros_controller_manager.cpp
sr_gazebo_sim/: CMakeLists.txt  gazebo_sim_plugin.xml  package.xml
sr_gazebo_sim/src/: gazebo_hardware_sim.cpp
sr_hand/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  shadowhand_analyzer.yaml
sr_hand/examples/: README.txt  link_joints.cpp  shadowhand_publisher.py
sr_hand/launch/: fingertip_static_transform.launch  load_hand_model.launch  load_hand_model_ellipsoid.launch  rviz_motor.launch  rviz_muscle.launch  sr_arm.launch  sr_arm_CAN.launch  sr_arm_CAN_noTF.launch  sr_arm_CAN_standalone.launch  sr_arm_and_hand.launch  sr_arm_motor.launch  sr_arm_motor_finger_ik.launch  sr_arm_motor_simple.launch  sr_arm_muscle.launch  sr_realarm_motor.launch  srh.launch  srh_etherCAT.launch  srh_etherCAT_noTF.launch  srh_etherCAT_standalone.launch  srh_motor.launch  srh_muscle.launch  static_transforms.launch
sr_hand/model/: dummy_force_control.yaml  shadowhand_muscle.urdf  sr_arm_motor.urdf  sr_arm_muscle.urdf  threedsensor.urdf.xacro
sr_hand/python_lib/: shadowhand_ros.py
sr_hand/scripts/: shadowhand_ros.py
sr_hand/src/: hand_commander.cpp  shadowhand_ros.cpp  sr_diagnosticer.cpp  sr_subscriber.cpp  sr_tactile_sensor_pub_node.cpp
sr_hand/test/: hand_commander_arm_and_hand_test.test  hand_commander_mock_test.test  hand_commander_test.cpp  hand_commander_test.launch  hand_commander_test.test  mock_hand.py
sr_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_kinematics/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_kinematics/src/: sr_kinematics.cpp
sr_mechanism_controllers/: CHANGELOG.rst  CMakeLists.txt  controller_plugins.xml  manifest.xml  package.xml
sr_mechanism_controllers/example/: README  simple_spline_trajectory.cpp  simple_trajectory.cpp  simple_trajectory_compare.cpp  srh_example_controller.cpp  srh_example_controller.hpp  srh_syntouch_controllers.cpp  srh_syntouch_controllers.hpp
sr_mechanism_controllers/src/: joint_spline_trajectory_action_controller.cpp  joint_trajectory_action_controller.cpp  sr_controller.cpp  sr_friction_compensation.cpp  srh_fake_joint_calibration_controller.cpp  srh_joint_effort_controller.cpp  srh_joint_muscle_valve_controller.cpp  srh_joint_position_controller.cpp  srh_joint_velocity_controller.cpp  srh_mixed_position_velocity_controller.cpp  srh_muscle_joint_position_controller.cpp  srh_syntouch_controllers.cpp
sr_mechanism_controllers/test/: joint_pos_controller.test  joint_pos_controller_with_fc.test  test_controllers.cpp  test_controllers.hpp  test_follow_joint_traj.sh  test_joint_pos_controller.cpp  test_joint_position_controller.cpp
sr_mechanism_model/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  transmission_plugin.xml
sr_mechanism_model/src/: biotac_transmission.cpp  (+5 more)
sr_move_arm/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_movements/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_robot_lib/: CMakeLists.txt  mainpage.dox  manifest.xml
sr_self_test/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_standalone/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
sr_standalone_example/: CMakeLists.txt  standalone_example.cpp
sr_tactile_sensors/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
sr_utilities/: CHANGELOG.rst  CMakeLists.txt  README.md  __init__.py  mainpage.dox  manifest.xml  package.xml  setup.py
(+1549 files in other folders)
