<package>
  <name>sr_gazebo_plugins</name>
  <version>1.3.5</version>
  <description>Gazebo Plugins for various Shadow Robot-specific sensors and actuators on the robot.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_gazebo_plugins</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>adapted by Ugo(software@shadowrobot.com)</author>
  <author>Sachin Chitta</author>
  <author>Stu Glaser</author>
  <author>John Hsu</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>sr_hardware_interface</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sr_self_test</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>sr_hardware_interface</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sr_self_test</run_depend>
  <run_depend>tinyxml</run_depend>

<export>
    <gazebo plugin_path="${prefix}/lib"/>
</export>

</package>
